force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Date_Availability__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Date_Availability__c</fullName>
    <label>Conclusion Date - Date Availability</label>
    <type>DateTime</type>
</CustomField>