force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Date_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Date_Confirmation__c</fullName>
    <label>Conclusion Date - Date Confirmation</label>
    <type>DateTime</type>
</CustomField>