force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Docs_Validation_VV__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Docs_Validation_VV__c</fullName>
    <label>Conclusion Date - Docs Validation (VV)</label>
    <type>DateTime</type>
</CustomField>