force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Emergency_Approval__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Emergency_Approval__c</fullName>
    <label>Conclusion Date - Emergency Approval</label>
    <type>DateTime</type>
</CustomField>