force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Engineering__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Engineering__c</fullName>
    <label>Conclusion Date - Engineering</label>
    <type>DateTime</type>
</CustomField>