force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Finance_Step_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Finance_Step_2__c</fullName>
    <label>Conclusion Date - Finance - Step 2</label>
    <type>DateTime</type>
</CustomField>