force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_GM_SC_FIN_CON__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_GM_SC_FIN_CON__c</fullName>
    <label>Conclusion Date - GM SC, FIN, CON</label>
    <type>DateTime</type>
</CustomField>