force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_HSEQ_EPCI_or_Op__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_HSEQ_EPCI_or_Op__c</fullName>
    <label>Conclusion Date - HSEQ (EPCI or Op)</label>
    <type>DateTime</type>
</CustomField>