force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Initial_Validation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Initial_Validation__c</fullName>
    <label>Conclusion Date - Initial Validation</label>
    <type>DateTime</type>
</CustomField>