force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Inspection_Definitio__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Inspection_Definitio__c</fullName>
    <label>Conclusion Date - Inspection Definition</label>
    <type>DateTime</type>
</CustomField>