force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_NF_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_NF_Evaluation__c</fullName>
    <label>Conclusion Date - NF Evaluation</label>
    <type>DateTime</type>
</CustomField>