force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Perform_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Perform_Inspection__c</fullName>
    <label>Conclusion Date - Perform Inspection</label>
    <type>DateTime</type>
</CustomField>