force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Procurement_Manager__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Procurement_Manager__c</fullName>
    <label>Conclusion Date - Procurement Manager</label>
    <type>DateTime</type>
</CustomField>