force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Quality__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Quality__c</fullName>
    <label>Conclusion Date - Quality</label>
    <type>DateTime</type>
</CustomField>