force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Vetting_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Vetting_Final_Check__c</fullName>
    <label>Conclusion Date - Vetting Final Check</label>
    <type>DateTime</type>
</CustomField>