force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_VVW_Attachment__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_VVW_Attachment__c</fullName>
    <label>Conclusion Date - VVW Attachment</label>
    <type>DateTime</type>
</CustomField>