force-app/main/default/objects/TW1_Request__c/fields/TW1_Contact_email_address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_email_address__c</fullName>
    <formula>TW1_Vendor__r.TW1_Contact_email_address__c</formula>
    <label>Contact email address</label>
    <type>Text</type>
</CustomField>