force-app/main/default/objects/TW1_Request__c/fields/TW1_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Name__c</fullName>
    <formula>TW1_Vendor__r.TW1_Contact_Name__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>