force-app/main/default/objects/TW1_Request__c/fields/TW1_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Number__c</fullName>
    <formula>TW1_Vendor__r.TW1_Contact_Number__c</formula>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>