force-app/main/default/objects/TW1_Request__c/fields/TW1_Contract_Amendment_Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Amendment_Scope_Description__c</fullName>
    <label>Contract Amendment Scope Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>