force-app/main/default/objects/TW1_Request__c/fields/TW1_Contract_Demand_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Demand_Creation_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Demand Creation Date</label>
    <type>DateTime</type>
</CustomField>