force-app/main/default/objects/TW1_Request__c/fields/TW1_Contract_Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Demand_Status__c</fullName>
    <label>Contract Demand Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>