force-app/main/default/objects/TW1_Request__c/fields/TW1_Contract_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Request_Stage__c</fullName>
    <label>Contract Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requesting</fullName>
                <default>true</default>
                <label>Requesting</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>