force-app/main/default/objects/TW1_Request__c/fields/TW1_Count_fiscal_docs__c.field-meta.xml
<CustomField>
    <fullName>TW1_Count_fiscal_docs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count fiscal docs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>