force-app/main/default/objects/TW1_Request__c/fields/TW1_Count_Inspection_Items__c.field-meta.xml
<CustomField>
    <fullName>TW1_Count_Inspection_Items__c</fullName>
    <label>Count Inspection Items</label>
    <summaryForeignKey>TW1_Inspection_Item__c.TW1_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>