force-app/main/default/objects/TW1_Request__c/fields/TW1_Country__c.field-meta.xml
<CustomField>
    <fullName>TW1_Country__c</fullName>
    <formula>TW1_Vendor__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>