force-app/main/default/objects/TW1_Request__c/fields/TW1_Created_Date_Enable_Customer_User__c.field-meta.xml
<CustomField>
    <fullName>TW1_Created_Date_Enable_Customer_User__c</fullName>
    <label>Created Date - Enable Customer User</label>
    <type>DateTime</type>
</CustomField>