force-app/main/default/objects/TW1_Request__c/fields/TW1_Day_of_The_Week_Date_Availability__c.field-meta.xml
<CustomField>
    <fullName>TW1_Day_of_The_Week_Date_Availability__c</fullName>
    <formula>Case (
Weekday(Datevalue(TW1_Conclusion_Date_Date_Availability__c)),
1, &apos;Sunday&apos;,
2, &apos;Monday&apos;,
3, &apos;Tuesday&apos;,
4, &apos;Wednesday&apos;,
5, &apos;Thursday&apos;,
6, &apos;Friday&apos;,
7, &apos;Saturday&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of The Week - Inspection Schedule</label>
    <type>Text</type>
</CustomField>