force-app/main/default/objects/TW1_Request__c/fields/TW1_Delivery_Base__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delivery_Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Base</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TW1_Facility__c.TW1_Type__c</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TW1_Facility__c</referenceTo>
    <relationshipLabel>Requests (Delivery Base)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>