force-app/main/default/objects/TW1_Request__c/fields/TW1_Delivery_Center__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delivery_Center__c</fullName>
    <label>Delivery Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>