force-app/main/default/objects/TW1_Request__c/fields/TW1_Delivery_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delivery_Date_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Date Confirmed</label>
    <type>Checkbox</type>
</CustomField>