force-app/main/default/objects/TW1_Request__c/fields/TW1_Demand_Category__c.field-meta.xml
<CustomField>
    <fullName>TW1_Demand_Category__c</fullName>
    <label>Demand Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Onshore/Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>