force-app/main/default/objects/TW1_Request__c/fields/TW1_Demand_Hiring_months__c.field-meta.xml
<CustomField>
    <fullName>TW1_Demand_Hiring_months__c</fullName>
    <label>Demand Hiring (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>