force-app/main/default/objects/TW1_Request__c/fields/TW1_Demand_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Demand_Number__c</fullName>
    <formula>IF(

OR(

 RecordTypeId =  LEFT($Setup.ID_Request__c.Id_RecordType_Request_New_Contract__c,15) ,
 RecordTypeId =   LEFT($Setup.ID_Request__c.Id_RecordType_Request_Contract_Amendment__c,15) ),

TW1_Autonumber_Contract__c,
&quot;&quot;)</formula>
    <label>Demand Number</label>
    <type>Text</type>
</CustomField>