force-app/main/default/objects/TW1_Request__c/fields/TW1_Emergency_Approval_Rejection_Note__c.field-meta.xml
<CustomField>
    <fullName>TW1_Emergency_Approval_Rejection_Note__c</fullName>
    <label>Emergency Approval - Rejection Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>