force-app/main/default/objects/TW1_Request__c/fields/TW1_Emergency_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Emergency_Date__c</fullName>
    <label>Emergency Date</label>
    <type>Date</type>
</CustomField>