force-app/main/default/objects/TW1_Request__c/fields/TW1_Emergency_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Emergency_Email__c</fullName>
    <label>Emergency Email</label>
    <type>Email</type>
</CustomField>