force-app/main/default/objects/TW1_Request__c/fields/TW1_EPCI_or_Operation__c.field-meta.xml
<CustomField>
    <fullName>TW1_EPCI_or_Operation__c</fullName>
    <label>EPCI or Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPCI</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>