force-app/main/default/objects/TW1_Request__c/fields/TW1_Equipment_n__c.field-meta.xml
<CustomField>
    <fullName>TW1_Equipment_n__c</fullName>
    <label>Equipment nº</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>