force-app/main/default/objects/TW1_Request__c/fields/TW1_Escope_to_be_Contracted__c.field-meta.xml
<CustomField>
    <fullName>TW1_Escope_to_be_Contracted__c</fullName>
    <label>Escope to be Contracted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>