force-app/main/default/objects/TW1_Request__c/fields/TW1_Expected_Date_for_Beginning__c.field-meta.xml
<CustomField>
    <fullName>TW1_Expected_Date_for_Beginning__c</fullName>
    <label>Expected Date for Beginning</label>
    <type>Date</type>
</CustomField>