force-app/main/default/objects/TW1_Request__c/fields/TW1_Explain__c.field-meta.xml
<CustomField>
    <fullName>TW1_Explain__c</fullName>
    <label>Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>