force-app/main/default/objects/TW1_Request__c/fields/TW1_Facility__c.field-meta.xml
<CustomField>
    <fullName>TW1_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>TW1_Facility__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>