force-app/main/default/objects/TW1_Request__c/fields/TW1_Final_Measurement__c.field-meta.xml
<CustomField>
    <fullName>TW1_Final_Measurement__c</fullName>
    <label>Final Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>