force-app/main/default/objects/TW1_Request__c/fields/TW1_Focal_point_Supply_Chain_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Focal_point_Supply_Chain_Email__c</fullName>
    <label>Focal point (Supply Chain) Email</label>
    <type>Email</type>
</CustomField>