force-app/main/default/objects/TW1_Request__c/fields/TW1_Homologation_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Homologation_Process_Status__c</fullName>
    <label>Homologation Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with red flag</fullName>
            </value>
            <value>
                <fullName>Not approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>