force-app/main/default/objects/TW1_Request__c/fields/TW1_Homologation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Homologation_Request_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homologation Request Date</label>
    <type>DateTime</type>
</CustomField>