force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Address__c</fullName>
    <label>Inspection Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barra Mansa</fullName>
            </value>
            <value>
                <fullName>Macaé</fullName>
            </value>
            <value>
                <fullName>Niterói</fullName>
            </value>
            <value>
                <fullName>Rio das Ostras</fullName>
            </value>
            <value>
                <fullName>São Paulo</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Angra dos Reis</fullName>
            </value>
            <value>
                <fullName>N/D</fullName>
            </value>
            <value>
                <fullName>Av Teste</fullName>
                <isActive>false</isActive>
                <label>Av Teste</label>
            </value>
            <value>
                <fullName>Rua Teste</fullName>
                <isActive>false</isActive>
                <label>Rua Teste</label>
            </value>
            <value>
                <fullName>rua xxxx</fullName>
                <isActive>false</isActive>
                <label>rua xxxx</label>
            </value>
            <value>
                <fullName>testeEEEEE2</fullName>
                <isActive>false</isActive>
                <label>testeEEEEE2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>