force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Contact_Number__c</fullName>
    <label>Inspection Contact Number</label>
    <type>Phone</type>
</CustomField>