force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Date_Option_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Date_Option_2__c</fullName>
    <inlineHelpText>This is a read only field. It can be filled via &quot;Schedule Inspection&quot; button after your save this record.</inlineHelpText>
    <label>Inspection Date Option 2</label>
    <type>Date</type>
</CustomField>