force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Perfomed__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Perfomed__c</fullName>
    <label>Inspection Performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material Release</fullName>
            </value>
            <value>
                <fullName>Pressure Test</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Dimensional</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Welding</fullName>
            </value>
            <value>
                <fullName>Documentation Analysis</fullName>
            </value>
            <value>
                <fullName>PMI follow up</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Acompanhamento de PMI</fullName>
                <isActive>false</isActive>
                <label>Acompanhamento de PMI</label>
            </value>
            <value>
                <fullName>Acompanhamento de Qualificação</fullName>
                <isActive>false</isActive>
                <label>Acompanhamento de Qualificação</label>
            </value>
            <value>
                <fullName>Análise de Documentação</fullName>
                <isActive>false</isActive>
                <label>Análise de Documentação</label>
            </value>
            <value>
                <fullName>Final Delivery</fullName>
                <isActive>false</isActive>
                <label>Final Delivery</label>
            </value>
            <value>
                <fullName>Inspeção Dimensional</fullName>
                <isActive>false</isActive>
                <label>Inspeção Dimensional</label>
            </value>
            <value>
                <fullName>Inspeção de Pintura</fullName>
                <isActive>false</isActive>
                <label>Inspeção de Pintura</label>
            </value>
            <value>
                <fullName>Inspeção de Solda</fullName>
                <isActive>false</isActive>
                <label>Inspeção de Solda</label>
            </value>
            <value>
                <fullName>Liberação de Materiais</fullName>
                <isActive>false</isActive>
                <label>Liberação de Materiais</label>
            </value>
            <value>
                <fullName>Reapresentação de Certificados</fullName>
                <isActive>false</isActive>
                <label>Reapresentação de Certificados</label>
            </value>
            <value>
                <fullName>Teste Hidrostático</fullName>
                <isActive>false</isActive>
                <label>Teste Hidrostático</label>
            </value>
            <value>
                <fullName>Teste de Carga</fullName>
                <isActive>false</isActive>
                <label>Teste de Carga</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>