force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Sent__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Sent</label>
    <type>Checkbox</type>
</CustomField>