force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Inspection_Status</valueSetName>
    </valueSet>
</CustomField>