force-app/main/default/objects/TW1_Request__c/fields/TW1_Inspector__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspector__c</fullName>
    <label>Inspector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>