force-app/main/default/objects/TW1_Request__c/fields/TW1_Instant_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Instant_Cancel_Date__c</fullName>
    <label>Instant Cancel Date</label>
    <type>DateTime</type>
</CustomField>