force-app/main/default/objects/TW1_Request__c/fields/TW1_Interaction_Government__c.field-meta.xml
<CustomField>
    <fullName>TW1_Interaction_Government__c</fullName>
    <inlineHelpText>Interaction with Government Agencies on Behalf of MODEC? Explain.</inlineHelpText>
    <label>Explain Government interaction.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>