force-app/main/default/objects/TW1_Request__c/fields/TW1_Interaction_w_Gov_Agen_on_Behalf_MdB__c.field-meta.xml
<CustomField>
    <fullName>TW1_Interaction_w_Gov_Agen_on_Behalf_MdB__c</fullName>
    <label>Interaction w/ Gov Agen on Behalf MdB?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>