force-app/main/default/objects/TW1_Request__c/fields/TW1_Invoice__c.field-meta.xml
<CustomField>
    <fullName>TW1_Invoice__c</fullName>
    <label>Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>