force-app/main/default/objects/TW1_Request__c/fields/TW1_IRF_Approved_Restriction__c.field-meta.xml
<CustomField>
    <fullName>TW1_IRF_Approved_Restriction__c</fullName>
    <formula>IF(ISPICKVAL(TW1_Inspection_Status__c,&quot;Approved with Restriction&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRF_Approved_Restriction</label>
    <type>Checkbox</type>
</CustomField>