force-app/main/default/objects/TW1_Request__c/fields/TW1_IRF_Emergency__c.field-meta.xml
<CustomField>
    <fullName>TW1_IRF_Emergency__c</fullName>
    <formula>IF(ISPICKVAL( TW1_Approval_Status_Emergency_Approval__c,&quot;Approved&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRF Emergency</label>
    <type>Checkbox</type>
</CustomField>