force-app/main/default/objects/TW1_Request__c/fields/TW1_IRF_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TW1_IRF_Rejected__c</fullName>
    <formula>IF(ISPICKVAL(TW1_Inspection_Status__c,&quot;Rejected&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRF Rejected</label>
    <type>Checkbox</type>
</CustomField>