force-app/main/default/objects/TW1_Request__c/fields/TW1_IRF_Reproved__c.field-meta.xml
<CustomField>
    <fullName>TW1_IRF_Reproved__c</fullName>
    <formula>IF(ISPICKVAL(TW1_Inspection_Status__c,&quot;Reproved&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRF Reproved</label>
    <type>Checkbox</type>
</CustomField>