force-app/main/default/objects/TW1_Request__c/fields/TW1_Is_RedFlagged__c.field-meta.xml
<CustomField>
    <fullName>TW1_Is_RedFlagged__c</fullName>
    <formula>IF(OR(ISPICKVAL(TW1_Red_Flag_Compliance_Step_1__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Compliance_Step_2__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Docs_Validation_VV__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Engineering__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Finance_Step_1__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Finance_Step_2__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_HSEQ__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Procurement_Manager__c,&quot;Yes&quot;),

ISPICKVAL(TW1_Red_Flag_Quality__c,&quot;Yes&quot;)),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is RedFlagged</label>
    <type>Checkbox</type>
</CustomField>