force-app/main/default/objects/TW1_Request__c/fields/TW1_Justification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Justification__c</fullName>
    <label>Justification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>