force-app/main/default/objects/TW1_Request__c/fields/TW1_Last_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Last_Scheduled_Date__c</fullName>
    <label>Last Scheduled Date</label>
    <type>DateTime</type>
</CustomField>