force-app/main/default/objects/TW1_Request__c/fields/TW1_Location_of_Service_Rendering__c.field-meta.xml
<CustomField>
    <fullName>TW1_Location_of_Service_Rendering__c</fullName>
    <label>Location of Service Rendering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>N.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>