force-app/main/default/objects/TW1_Request__c/fields/TW1_Management_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>TW1_Management_Of_Change__c</fullName>
    <inlineHelpText>(MOC) Fill as the Ex.: MOC-MV20-20-00001</inlineHelpText>
    <label>Management Of Change</label>
    <length>40</length>
    <type>Text</type>
</CustomField>