force-app/main/default/objects/TW1_Request__c/fields/TW1_Modec_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Modec_Requester_Email__c</fullName>
    <label>Modec Requester Email</label>
    <type>Email</type>
</CustomField>