force-app/main/default/objects/TW1_Request__c/fields/TW1_Nature_of_Demand__c.field-meta.xml
<CustomField>
    <fullName>TW1_Nature_of_Demand__c</fullName>
    <label>Nature of Demand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Renewel</fullName>
            </value>
            <value>
                <fullName>Scope Amendment</fullName>
            </value>
            <value>
                <fullName>Term Extension</fullName>
            </value>
            <value>
                <fullName>Registration Change</fullName>
            </value>
            <value>
                <fullName>Clause Revision</fullName>
            </value>
            <value>
                <fullName>Contract Termination/Acquittance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>