force-app/main/default/objects/TW1_Request__c/fields/TW1_New_Contract__c.field-meta.xml
<CustomField>
    <fullName>TW1_New_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contract</label>
    <referenceTo>TW1_MODEC_Contract__c</referenceTo>
    <relationshipLabel>Requests (New Contract)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>